--- a/package.json
+++ b/package.json
@@ -10,12 +10,25 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "@reduxjs/toolkit": "^1.9.2",
+    "@tinymce/tinymce-react": "^4.3.0",
     "@types/node": "18.14.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "axios": "^1.3.3",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.5"
+    "react-icons": "^4.7.1",
+    "react-redux": "^8.0.5",
+    "react-star-ratings": "^2.3.0",
+    "tinymce": "^6.3.2",
+    "typescript": "4.9.5",
+    "universal-cookie": "^4.0.4"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.7"
   }
 }
