--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,8 +17,11 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./*"]
-    }
+    
+    },
+   
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"],
+
 }
